retrive data work fine

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -19,8 +19,8 @@
 	<footer>
 		<ul class="actions">
 			<li><a href="/signup" class="button big">Signup</a></li>
-			<li><a href="/post_detail" class="button big">retrive data</a></li>
-			<li><a href="/timeline" class="button big">timeline</a></li>
+			<li><a href="/shop" class="button big">Retrive data</a></li>
+			<li><a href="/timeline" class="button big">Insert data</a></li>
 		</ul>
 		
 	</footer>
